--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "lodash.throttle": "^4.1.1",
     "next": "12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "store2": "^2.13.2"
   },
   "devDependencies": {
     "eslint": "8.18.0",
